amcvideodec: When outputting on a surface, accept all color formats

We don't have to understand them, we handle them as a GL texture.

https://bugzilla.gnome.org/show_bug.cgi?id=762792